// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput renders 1`] = `
<div
  className="search-shadow"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="result-list"
    className="search-field"
    role="combobox"
  >
    <Svg
      name="magnifying-glass"
    />
    <input
      aria-activedescendant=""
      aria-autocomplete="list"
      aria-controls="result-list"
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="A placeholder"
      spellCheck={false}
      value=""
    />
    <div
      className="summary"
    >
      So many results
    </div>
    <CloseButton
      buttonClass=""
    />
  </div>
</div>
`;

exports[`SearchInput shows nav buttons 1`] = `
<div
  className="search-shadow"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="result-list"
    className="search-field"
    role="combobox"
  >
    <Svg
      name="magnifying-glass"
    />
    <input
      aria-activedescendant=""
      aria-autocomplete="list"
      aria-controls="result-list"
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="A placeholder"
      spellCheck={false}
      value=""
    />
    <div
      className="summary"
    >
      So many results
    </div>
    <div
      className="search-nav-buttons"
    >
      <button
        className="nav-btn prev"
        key="arrow-up"
        onClick={[MockFunction]}
        title="Previous result"
        type="arrow-up"
      >
        <Svg
          name="arrow-up"
        />
      </button>
      <button
        className="nav-btn next"
        key="arrow-down"
        onClick={[MockFunction]}
        title="Next result"
        type="arrow-down"
      >
        <Svg
          name="arrow-down"
        />
      </button>
    </div>
    <CloseButton
      buttonClass=""
    />
  </div>
</div>
`;

exports[`SearchInput shows svg error emoji 1`] = `
<div
  className="search-shadow"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="result-list"
    className="search-field"
    role="combobox"
  >
    <Svg
      name="magnifying-glass"
    />
    <input
      aria-activedescendant=""
      aria-autocomplete="list"
      aria-controls="result-list"
      className="empty"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="A placeholder"
      spellCheck={false}
      value=""
    />
    <div
      className="summary"
    >
      So many results
    </div>
    <div
      className="search-nav-buttons"
    >
      <button
        className="nav-btn prev"
        key="arrow-up"
        onClick={[MockFunction]}
        title="Previous result"
        type="arrow-up"
      >
        <Svg
          name="arrow-up"
        />
      </button>
      <button
        className="nav-btn next"
        key="arrow-down"
        onClick={[MockFunction]}
        title="Next result"
        type="arrow-down"
      >
        <Svg
          name="arrow-down"
        />
      </button>
    </div>
    <CloseButton
      buttonClass=""
    />
  </div>
</div>
`;

exports[`SearchInput shows svg magnifying glass 1`] = `
<div
  className="search-shadow"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="result-list"
    className="search-field"
    role="combobox"
  >
    <Svg
      name="magnifying-glass"
    />
    <input
      aria-activedescendant=""
      aria-autocomplete="list"
      aria-controls="result-list"
      className=""
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="A placeholder"
      spellCheck={false}
      value=""
    />
    <div
      className="summary"
    >
      So many results
    </div>
    <div
      className="search-nav-buttons"
    >
      <button
        className="nav-btn prev"
        key="arrow-up"
        onClick={[MockFunction]}
        title="Previous result"
        type="arrow-up"
      >
        <Svg
          name="arrow-up"
        />
      </button>
      <button
        className="nav-btn next"
        key="arrow-down"
        onClick={[MockFunction]}
        title="Next result"
        type="arrow-down"
      >
        <Svg
          name="arrow-down"
        />
      </button>
    </div>
    <CloseButton
      buttonClass=""
    />
  </div>
</div>
`;
